Match setup modified